<resources>
    <string name="app_name_live">BottlesUp</string>
    <string name="app_name_demo">BottlesUp(Demo)</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="khalti_test_public_key">test_public_key_b497d7ce8fd0407998489587f55080ce</string>
    <string name="notification">Notification</string>
    <string name="topup_history">Top Up History</string>
    <string name="topup_consumption_history">Consumption History</string>
    <string name="saving">Savings</string>
    <string name="tutorial">Tutorials</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="not_checked_in">Not Checked-In</string>
    <string name="user_name">Ram Mandal</string>
    <string name="user_balance">Balance : %s</string>
    <string name="consumptionHistoryVenue">Venue</string>
    <string name="foods">Food</string>
    <string name="drinks">Drinks</string>
    <string name="wallet">Wallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_venue">Search Venue</string>
    <string name="venue_name">Cafe Soma</string>
    <string name="venue_type">Restaurant and Cafe</string>
    <string name="venue_location">New Baneshwor, Kathmandu</string>
    <string name="venue_detail">Venue Restaurant and Lounge is an experience that every Nebraskan craves and every out-of-town visitor hears about. \nOur award-winning cuisine is handmade from scratch ingredients, including the freshest farm-to-table products from Nebraska farms and exquisite seafood from all around the world. \n\nWe take pride in being Gluten-Free Certified and providing event and wedding catering services to the Lincoln area.</string>
    <string name="venue_distance">%s  km</string>
    <string name="item_price_text_view">Rs. %s</string>
    <string name="checked_in">Soma Cafe</string>
    <string name="drink_name">Martin Extra Dry Vermouth</string>
    <string name="menu_price">Menu Price : Rs. %s</string>
    <string name="bottles_up_price">BottlesUp Price : Rs. %s</string>
    <string name="total_saving">Your Total Saving : Rs. %s</string>
    <string name="drink_option">Size</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="mixtures">Mixer</string>
    <string name="coke">Coke</string>
    <string name="water">Water</string>
    <string name="quantity">Quantity</string>
    <string name="qty">Qty</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="soda">Soda</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="restaurant_name">Soma Cafe</string>
    <string name="add_more_food">Add more Food</string>
    <string name="add_more_beverage">Add more Drinks</string>
    <string name="sub_total">SUB TOTAL</string>
    <string name="total_value">Rs. %s</string>
    <string name="service_charge">SERVICE CHARGE</string>
    <string name="vat">VAT</string>
    <string name="grand_total">Grand Total</string>
    <string name="you_saved">You Will Save</string>
    <string name="proceed">Proceed</string>
    <string name="no_items_in_cart">You don\'t have any item on the cart</string>
    <string name="already_member">Do you have an account?</string>
    <string name="proceed_register">Register</string>
    <string name="proceed_sign_in">Sign In</string>
    <string name="not_member">Create an account</string>
    <string name="hint_email_user">Email</string>
    <string name="hint_email_password">******</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_email_value">eg;ram.cp18113@gmail.com</string>
    <string name="hint_password_value">******</string>
    <string name="hint_first_name_value">Ram</string>
    <string name="hint_last_name_value">Mandal</string>
    <string name="hint_mobile_value">eg;980787766</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="hint_date_of_birth">eg; 1989-11-20</string>
    <string name="login">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="accept_terms">I accept all terms and conditions</string>
    <string name="drink_info">%1$s (%2$s, %3$s)</string>
    <string name="venue_detail_info">Venue Detail</string>
    <string name="address_concat">%1$s, %2$s</string>
    <string name="already_checked_in_different"><![CDATA[
       You are currently checked in at <b> %1$s.</b><br>Do you want to check in to <b>%2$s</b>]]>?
    </string>
    <string name="already_checked_in_same"><![CDATA[
    Do you want to check out from <b>%s</b>?]]>
    </string>
    <string name="item_present"><![CDATA[
    <b>You have items in cart<br><br></b>]]>
    </string>
    <string name="available_balance"><![CDATA[
    Remaining Balance: <b>Rs. %s/-</b>]]></string>
    <string name="verify">Verify</string>
    <string name="waitForSms">Wait for SMS</string>
    <string name="askVerificationCode">Please enter verification code</string>
    <string name="party_started">Let\'s get the\n party started</string>
    <string name="user_not_activated">Your account is in Verification mode</string>
    <string name="please_keep_patient">Please keep Patience</string>
    <string name="your_account_suspended">Your Account has been Suspended</string>
    <string name="please_contact_customer_care">Please contact  customer care</string>
    <string name="resend_otp">Didn\'t receive verification code ?</string>
    <string name="resend">Resend</string>
    <string name="topup_date">Jan 24, 2018</string>
    <string name="current_balance">Current Balance</string>
    <string name="amount_value">1000</string>
    <string name="plus_500">+ Rs. 500</string>
    <string name="plus_1000">+ Rs. 1000</string>
    <string name="plus_2000">+ Rs. 2000</string>
    <string name="top_up_up_at_venue">Top Up at Venue</string>
    <string name="btn_top_up_up_at_venue">Top Up</string>
    <string name="table_no">T B12</string>
    <string name="choose_table">Choose table</string>
    <string name="no_items_found">Sorry ! but no items found</string>
    <string name="topup_venue_and_date">-%1$s, %2$s</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="special">Enter Special Request (if any)</string>
    <string name="check_out">Check Out</string>
    <string name="or">OR</string>
    <string name="topup_with">Top Up with</string>
    <string name="esewa">e-sewa</string>
    <string name="ipay">i-pay</string>
    <string name="khalti">Khalti</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_summary">Update your profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_summary">Update your current password with new one. Make more secure.</string>
    <string name="change_notification">Notification Settings</string>
    <string name="change_notification_summary">Enable to get the latest update</string>
    <string name="old_password">Enter Old Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="app_version">BottlesUp App. Version</string>
    <string name="app_version_value">Version %s</string>
    <string name="no_of_order">No. of Orders</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_value">9808065961</string>
    <string name="facebook_url">https://www.facebook.com/ram.curiosity</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google +</string>
    <string name="google_url">https://www.plus.google.com/01/122</string>
    <string name="email_address_value">ram.cp18113@gmail.com</string>
    <string name="no_of_top_up">No. of Top up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_recovery">Password Recover</string>
    <string name="hint_user_name">Enter mobile number</string>
    <string name="request_token">Request Code</string>
    <string name="otp">Enter token eg; 1234</string>
    <string name="reset_password">Reset password</string>
    <string name="already_received_token">Code already received? </string>
    <string name="click_here"> Click Here</string>
    <string name="select_seating_place">Please select seating</string>
    <string name="on_my_way">On The Way</string>
    <string name="choose_seating_place">Select Seating</string>
    <string name="you_are_not_checked_in"><![CDATA[
        Sorry, but you are currently not checked-in to any venue. Please check-in to a venue.
    ]]></string>
    <string name="check_in">Check in</string>
    <string name="order_type">Order Type</string>
    <string name="at_venue">At Venue</string>
    <string name="ten_min">10 Minutes</string>
    <string name="twenty_min">20 Minutes</string>
    <string name="thirty_min">30 Minutes</string>
    <string name="forty_five_min">45 Minutes</string>
    <string name="sixty_min">60 Minutes</string>
    <string name="select_arrival_time">Please select time</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="send_referral">Send Referral Code</string>
    <string name="invite">Invite</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="tax_inclusive_exclusive">tax inclusive</string>
    <string name="events">Events</string>
    <string name="event_detail">Event detail</string>
    <string name="start_from">Starts From</string>
    <string name="ends_at">Ends On</string>
    <string name="resend_referral_code">Resend Referral code</string>
    <string name="enter_referral_code">Enter referral code</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="expenses">Total spent</string>
    <string name="savings">Total savings</string>
    <string name="expenses_value">Rs. %s</string>
    <string name="saving_value">Rs. %s</string>
    <string name="thanks">Thank you for using BottlesUp</string>
    <string name="congratulation_saving">Congratulation !! you have a nice savings.</string>
    <string name="saved_percent">34%</string>
    <string name="saved">saved</string>
    <string name="consumption_detail">Consumption Detail</string>
    <string name="loading">Loading</string>
    <string name="item">Item</string>
    <string name="size">Size</string>
    <string name="rate">Rate</string>
    <string name="amount">Amount</string>
    <string name="share">Share</string>
    <string name="enter_code">Enter code</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="rs">Rs. </string>
    <string name="full_name">Full Name</string>
    <string name="status">Status</string>
    <string name="history">History</string>
    <string name="pending">pending</string>
    <string name="topup_type">Type : %s</string>
    <string name="order_id">Order No.: %s</string>
    <string name="topup_id">Top Up ID: %s</string>
</resources>