<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="10dip">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_navigation_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style.HEAD_LINE_DARK"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dip"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher_white" />
            </LinearLayout>
        </RelativeLayout>


        <EditText
            android:id="@+id/edit_register_first_name"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/hint_first_name"
            android:inputType="text" />


        <EditText
            android:id="@+id/edit_register_last_name"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/hint_last_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/dob_picker"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/edit_text_under_line"
            android:gravity="center_vertical"
            android:hint="@string/date_of_birth"
            android:textColor="@color/very_dark_grey"
            android:textColorHint="@color/very_light_grey"
            android:textSize="@dimen/_14sdp" />


        <TextView
            style="@style/text_style.NORMAL_CAPTION_DARK"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            style="@style/radio_group_style"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="2dip"
            android:orientation="horizontal">

            <RadioButton
                style="@style/radio_button_style"
                android:layout_marginLeft="0dip"
                android:text="@string/male" />

            <RadioButton
                style="@style/radio_button_style"
                android:text="@string/female" />

            <RadioButton
                style="@style/radio_button_style"
                android:text="@string/other" />
        </RadioGroup>

        <EditText
            android:id="@+id/edit_register_email"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/hint_email_user"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_register_mobile"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/hint_mobile"
            android:inputType="number"
            android:maxLength="10" />

        <EditText
            android:id="@+id/edit_register_password"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_register_confirm_password"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/hint_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_register_referral_code"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/referral_code"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/terms_and_condition_action"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/text_style.NORMAL_CAPTION_DARK"
            android:text="@string/terms_and_condition"
            android:textColor="@color/blue" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/chk_box_terms_condition"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:text="@string/accept_terms" />

        <Button
            android:id="@+id/btn_register_proceed"
            style="@style/button_normal_style.PROCEED"
            android:layout_gravity="center"
            android:layout_marginTop="30dip"
            android:text="@string/proceed_register" />

        <LinearLayout
            android:id="@+id/already_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_member"
                android:textAllCaps="false"
                android:textColor="@color/very_dark_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dip"
                android:layout_marginStart="3dip"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/very_dark_grey"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>