<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgot_password_reset_layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_otp_token"
            style="@style/edit_text_style"
            android:hint="@string/enter_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_user_name"
            style="@style/edit_text_style"
            android:maxLength="10"
            android:hint="@string/hint_user_name"
            android:inputType="number" />

        <EditText
            android:id="@+id/edt_user_password"
            style="@style/edit_text_style"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_user_confirm_password"
            style="@style/edit_text_style"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_reset_password"
            style="@style/button_normal_style.PROCEED"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/reset_password" />

    </LinearLayout>
</ScrollView>