<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/order_id"
        style="@style/text_style.NORMAL_DARK"
        android:text="@string/order_id" />


    <TextView
        android:id="@+id/venue_name"
        style="@style/text_style.NORMAL_DARK"
        android:layout_below="@+id/order_id"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/venue_name" />

    <TextView
        android:id="@+id/created_on"
        android:layout_marginTop="@dimen/_2sdp"
        style="@style/text_style.NORMAL_BODY_DARK"
        android:layout_below="@+id/venue_name"
        android:text="@string/date_of_birth" />

    <TextView
        android:id="@+id/status"
        style="@style/text_style.NORMAL_BODY_DARK"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/status_in_kitchen_bg"
        android:text="@string/pending"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/amount"
        style="@style/text_style.NORMAL_DARK"
        android:layout_alignParentEnd="true"
        android:textColor="@color/dark_grey"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/status"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/rs"
        android:textStyle="bold" />
</RelativeLayout>