<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_detail" />

    <LinearLayout
        style="@style/child_container"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_old_password"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_new_password"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_confirm_password"
            style="@style/login_sign_up_edit_text.REGISTER"
            android:hint="@string/hint_confirm_new_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_change_password"
            style="@style/button_normal_style.PROCEED"
            android:layout_gravity="center"
            android:layout_marginTop="40dip"
            android:text="@string/change_password" />
    </LinearLayout>
</LinearLayout>