<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgot_password_request_otp_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_otp_user_name"
            style="@style/edit_text_style"
            android:hint="@string/hint_user_name"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="10" />

        <Button
            android:id="@+id/btn_request_otp"
            style="@style/button_normal_style.PROCEED"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/request_token" />

        <RelativeLayout
            android:id="@+id/already_have_token_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:padding="10dip">

            <TextView
                android:id="@+id/prefix"
                style="@style/text_style.NORMAL_DARK"
                android:text="@string/already_received_token" />

            <TextView
                style="@style/text_style.NORMAL_DARK"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/prefix"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/click_here"
                android:textColor="@color/blue" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>